package org.jcjxb.wsn.service;

option java_package = "org.jcjxb.wsn.service.proto";
option java_outer_classname = "SimulationConfig";

import "BasicDataType.proto";

message SensorConfig {
	optional double energy = 1; // 电池容量
	optional double transmissionRadius = 2; // 传输半径
}

message SensorNodeDeployConfig {
	enum DeployType {
		RANDOM = 0;
		STATIC = 1;
		GRID = 2;
		CIRCLE = 3;
	}
	optional DeployType deployType = 1;
	optional uint32 nodeNum = 2;
	optional SensorConfig sensorConfig = 3;
	optional PositionList postionList = 4;
}

message SinkNodeDeployConfig {
	enum DeployType {
		RANDOM = 0;
		STATIC = 1;
	}
	optional DeployType deployType = 1;
	optional uint32 nodeNum = 2;
	optional PositionList postionList = 4;
}

message SourceEventDeployConfig {
	enum DeployType {
		RANDOM = 0;
		STATIC = 1;
	}
	optional double radius = 2;
	optional uint32 eventNum = 3;
	optional PositionList postionList = 4;
}

message DeployConfig {
	optional double width = 1;
	optional double length = 2;
	optional SensorNodeDeployConfig sensorNodeDeployConfig = 3;
	optional SinkNodeDeployConfig sinkNodeDeployConfig = 4;
	optional SourceEventDeployConfig sourceEventDeployConfig = 5;
}




